sonarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8989
  selector:
    app: sonarr
  type: LoadBalancer
