sonarr/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: sonarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`sonarr.anasjabri.com`)
      kind: Rule
      services:
      - name: sonarr
        port: 8080
      middlewares:
      - name: basic-auth
        namespace: kube-system
      - name: redirect-scheme
        namespace: kube-system
  tls:
    secretName: sonarr.anasjabri.com-tls
